--- a/my-app/src/index.html
+++ b/my-app/src/index.html
@@ -24,6 +24,7 @@
     
     <meta name="theme-color" content="#31d53d" />
     <script type="module" src="./js/main.js"></script>
+    <script type="module" src="./js/auth/index.js"></script>
     <link rel="stylesheet" href="./css/style.css"/>
   </head>
   <body>
@@ -32,17 +33,17 @@
       <div class="d-flex justify-content-center container titleee backgrounds">
         <img src="/assets/imgs/title.5a14c1e9.png" alt="">
       </div>
-      <form action="home.html" id="login" class="container wrap-form text-center">
+      <form id="login_form" class="container wrap-form text-center">
         <h1 class="login">Login</h1>
         <div class="input-box">
-            <input type="text" placeholder="Username" id="username">
+            <input type="email" placeholder="email" id="email" name="email">
             <i class="fa-solid fa-user"></i>
         </div>
         <div class="input-box">
-            <input type="password" placeholder="Password" id="password">
+            <input type="password" placeholder="Password" id="password" name="password" >
             <i class="fa-solid fa-lock"></i>
         </div>
-        <button type="submit" class="bttn"><b>Login</b></button>
+        <button type="submit" class="btn btn-primary"><b>Login</b></button>
         <div class="create-account">
             <p>Create Account <a href="signup.html">Sign-up</a></p>
         </div>
