--- a/my-app/src/siteadmin.html
+++ b/my-app/src/siteadmin.html
@@ -27,6 +27,7 @@
     
     <link rel="stylesheet" href="./css/style.css" />
     <script type="module" src="./js/main.js"></script>
+    <script type="module" src="./js/auth/siteadmin.js"></script>
   </head>
   <body>
     <nav class="fixed-top navbar navbar-expand-lg bg-light navigatu">
