--- a/my-app/src/editpost.html
+++ b/my-app/src/editpost.html
@@ -77,7 +77,7 @@
                 </a>
                 </li>
               <li class="home active" data-where="home">
-                <a href="home.html">
+                <a href="home.  vhtml">
                   <span class="material-icons-outlined bub">
                     home
                 </span>
@@ -121,34 +121,45 @@
               <div class="d-flex">
                 <small>Post ID : </small><small class="postidnum">103</small>
               </div>
-              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium vero, doloribus consectetur, eos recusandae animi blanditiis repellat amet ipsum necessitatibus, ducimus earum atque ab odio error voluptas iusto optio incidunt.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit iste, laudantium recusandae officia unde vitae animi reiciendis ad totam sint, quis maiores eveniet veniam dicta ullam aut deserunt cum quidem.
-              </p>
+              <div class="container mb-2">
+                <div class="row">
+                    <div class="col-12 col-md-8 offset-md-2">
+                        <form>
+                            <div class="form-group">
+                                <textarea class="form-control" id="exampleTextarea" rows="5"></textarea>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
               <div class="d-lg-none d-xl-none">
                 <div class="d-flex">
-                  <a href="editpost.html">
+                  <a href="post.html">
                     <button type="button" class="btn btn-primary">
-                      Edit post
-                    </button>
+                      Save
+                    </button> 
                   </a>
                   <div class="col-1"></div>
-                  <button type="button" class="btn btn-primary">
-                    Delete post
-                  </button>
+                  <a href="post.html">
+                    <button type="button" class="btn btn-primary">
+                      Discard
+                    </button> 
+                  </a>
                 </div>
               </div>
             </div>
             <div class="d-lg-block d-md-block d-none">
               <div class="d-flex">
-                <a href="editpost.html">
+                <a href="post.html">
                   <button type="button" class="btn btn-primary">
-                    Edit post
+                    Save
+                  </button> 
+                </a> <div class="col-1"></div>
+                <a href="post.html">
+                  <button type="button" class="btn btn-primary">
+                    Discard
                   </button> 
                 </a>
-                <div class="col-1"></div>
-                  <button type="button" class="btn btn-primary">
-                    Delete post
-                  </button> 
               </div>
             </div>
           </div>
@@ -189,7 +200,7 @@
             <span>Glomer Celestino</span>
             <div class="textsy"><small>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque fuga deserunt praesentium ratione, commodi autem culpa asperiores nostrum voluptatum ducimus dolores voluptate magni mollitia soluta facere corrupti quo deleniti quisquam.</small></div>
             <small class="mx-2">2 hours ago</small>
-            <div class="mt-1 mb-2"><a href="editcomment.html"><button type="button" class="btn btn-primary text-light">Edit</button></a><button type="button" class="btn btn-primary text-light">Delete</button></div>
+            <div class="mt-1 mb-2"><button type="button" class="btn btn-primary text-light">Edit</button><button type="button" class="btn btn-primary text-light">Delete</button></div>
           </div>
 
           <div class="thiscom col-lg-8  col-sm-8 col-md-8">
