--- a/my-app/src/editprofile.html
+++ b/my-app/src/editprofile.html
@@ -70,9 +70,9 @@
           <div class="tabbars tab-style1 container-fluid">
             <ul class="flexs-center">
               <li class="chat-message" data-where="group">
-                <a href="about.html">
+                <a href="notification.html">
                   <span class="material-icons-outlined bub">
-                    error
+                    notifications
                   </span>
                 </a>
                 </li>
@@ -94,7 +94,7 @@
           </div>
           <div class="container-fluid under-icon">
             <ul class="flexsi-center">
-              <li>About</li>
+              <li>Notification</li>
               <li>Home</li>
               <li>Profile</li>
             </ul>
@@ -161,7 +161,7 @@
               <div class="descipt">
                 <h1 class="px-lg-3">About</h1>
                 <div class="d-flex ">
-                  <textarea placeholder="Tell something you want to share..." class="editnow aboutchange mx-4"></textarea>
+                  <textarea placeholder="Tell something you want to share..." class="editnow aboutchange mx-3 mx-lg-5 mx-sm-3"></textarea>
                 </div>
                 <div class="d-flex">
                   <div class="col-sm-3 mt-3 mb-4 col-lg-2 px-2 px-lg-4 px-md-2">
