--- a/my-app/src/siteadmin.html
+++ b/my-app/src/siteadmin.html
@@ -72,9 +72,9 @@
           <div class="tabbars tab-style1 container-fluid">
             <ul class="flexs-center">
               <li class="chat-message" data-where="group">
-                <a href="about.html">
+                <a href="notification.html">
                   <span class="material-icons-outlined bub">
-                    error
+                    notifications
                   </span>
                 </a>
                 </li>
@@ -96,7 +96,7 @@
           </div>
           <div class="container-fluid under-icon">
             <ul class="flexsi-center">
-              <li>About</li>
+              <li>Notification</li>
               <li>Home</li>
               <li>Profile</li>
             </ul>
