--- a/my-app/src/about.html
+++ b/my-app/src/about.html
@@ -70,10 +70,10 @@
         <div class="container-fluid">
           <div class="tabbars tab-style1 container-fluid">
             <ul class="flexs-center">
-              <li class="chat-message active" data-where="group">
-                <a href="about.html">
+              <li class="chat-message" data-where="group">
+                <a href="notification.html">
                   <span class="material-icons-outlined bub">
-                    error
+                    notifications
                   </span>
                 </a>
                 </li>
@@ -95,7 +95,7 @@
           </div>
           <div class="container-fluid under-icon">
             <ul class="flexsi-center">
-              <li>About</li>
+              <li>Notification</li>
               <li>Home</li>
               <li>Profile</li>
             </ul>
