--- a/my-app/src/editcomment.html
+++ b/my-app/src/editcomment.html
@@ -126,12 +126,9 @@
               </p>
               <div class="d-lg-none d-xl-none">
                 <div class="d-flex">
-                  <a href="editpost.html">
-                    <button type="button" class="btn btn-primary">
-                      Edit post
-                    </button>
-                  </a>
-                  <div class="col-1"></div>
+                  <button type="button" class="btn btn-primary">
+                    Edit post
+                  </button> <div class="col-1"></div>
                   <button type="button" class="btn btn-primary">
                     Delete post
                   </button>
@@ -140,15 +137,12 @@
             </div>
             <div class="d-lg-block d-md-block d-none">
               <div class="d-flex">
-                <a href="editpost.html">
-                  <button type="button" class="btn btn-primary">
-                    Edit post
-                  </button> 
-                </a>
-                <div class="col-1"></div>
-                  <button type="button" class="btn btn-primary">
-                    Delete post
-                  </button> 
+                <button type="button" class="btn btn-primary">
+                  Edit post
+                </button> <div class="col-1"></div>
+                <button type="button" class="btn btn-primary">
+                  Delete post
+                </button>
               </div>
             </div>
           </div>
@@ -182,15 +176,28 @@
 
           <div class="thiscom col-lg-8 col-sm-8 col-md-8 bg-primary owncom">
             <a href="friendsprofile.html">
-              <button>
-                <img src="/assets/imgs/icooon.b1acba16.png" alt="">
-              </button>
+                <button>
+                    <img src="/assets/imgs/icooon.b1acba16.png" alt="">
+                </button>
             </a>
             <span>Glomer Celestino</span>
-            <div class="textsy"><small>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque fuga deserunt praesentium ratione, commodi autem culpa asperiores nostrum voluptatum ducimus dolores voluptate magni mollitia soluta facere corrupti quo deleniti quisquam.</small></div>
+            <div class="textsy">
+                <form>
+                    <div class="form-group">
+                        <textarea class="form-control w-100" id="exampleTextarea" rows="5"></textarea>
+                    </div>
+                </form>
+            </div>
             <small class="mx-2">2 hours ago</small>
-            <div class="mt-1 mb-2"><a href="editcomment.html"><button type="button" class="btn btn-primary text-light">Edit</button></a><button type="button" class="btn btn-primary text-light">Delete</button></div>
-          </div>
+            <div class="mt-1 mb-2">
+                <a href="post.html">
+                    <button type="button" class="btn btn-primary text-light">Save</button>
+                </a>
+                <a href="post.html">
+                    <button type="button" class="btn btn-primary text-light">Discard</button>
+                </a>
+            </div>
+        </div>
 
           <div class="thiscom col-lg-8  col-sm-8 col-md-8">
             <a href="friendsprofile.html">
