--- a/my-app/src/index.html
+++ b/my-app/src/index.html
@@ -36,7 +36,7 @@
       <form id="login_form" class="container wrap-form text-center">
         <h1 class="login">Login</h1>
         <div class="input-box">
-            <input type="email" placeholder="email" id="email" name="email">
+            <input type="email" placeholder="Email" id="email" name="email">
             <i class="fa-solid fa-user"></i>
         </div>
         <div class="input-box">
