--- a/my-app/src/otherprofile.html
+++ b/my-app/src/otherprofile.html
@@ -78,9 +78,9 @@
           <div class="tabbars tab-style1 container-fluid">
             <ul class="flexs-center">
               <li class="chat-message" data-where="group">
-                <a href="about.html">
+                <a href="notification.html">
                   <span class="material-icons-outlined bub">
-                    error
+                    notifications
                   </span>
                 </a>
                 </li>
@@ -102,7 +102,7 @@
           </div>
           <div class="container-fluid under-icon">
             <ul class="flexsi-center">
-              <li class="notchat"  data-where="">About</li>
+              <li class="notchat"  data-where="">Notification</li>
               <li class="nothome"  data-where="">Home</li>
               <li class="notprofile"  data-where="">Profile</li>
             </ul>
