--- a/my-app/src/otherprofile.html
+++ b/my-app/src/otherprofile.html
@@ -123,17 +123,6 @@
               <small>October 25, 2000</small>
               <small class="qual">Followers 10</small>
               <a href=""><small>glomer.celestino@yahoo.com</small></a>
-
-              <div class="d-flex">
-
-                <div class="col-sm-5 col-lg-2 col-md-3 mx-4 mt-3 mb-4">
-                    <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
-                      Follow
-                    </button>
-                </div>
-                
-              </div>
-
             </div>
 
             <div class="container-fluid sector">
@@ -217,7 +206,7 @@
                 <img src="/assets/imgs/icooon.b1acba16.png" alt="" class="logophoto sizelogo">
                 <small class="nameko">Glomer Celestino</small>
               </div>
-              <div class="mt-3"> 
+              <div class="mt-1"> 
                 <a href="otherprofile.html">
                   <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
                     View
@@ -227,10 +216,10 @@
             </div>
             <div class="d-flex">
               <div class="col-9">
-                <img src="/assets/icooon.b1acba16.png" alt="" class="logophoto sizelogo">
+                <img src="/assets/imgs/icooon.b1acba16.png" alt="" class="logophoto sizelogo">
                 <small class="nameko">Melvin Jipos</small>
               </div>
-              <div class="mt-3"> 
+              <div class="mt-1"> 
                 <a href="otherprofile.html">
                   <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
                     View
@@ -240,10 +229,10 @@
             </div>
             <div class="d-flex">
               <div class="col-9">
-                <img src="/assets/icooon.b1acba16.png" alt="" class="logophoto sizelogo">
+                <img src="/assets/imgs/icooon.b1acba16.png" alt="" class="logophoto sizelogo">
                 <small class="nameko">Donald Cuenca</small>
               </div>
-              <div class="mt-3"> 
+              <div class="mt-1"> 
                 <a href="otherprofile.html">
                   <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
                     View
@@ -253,10 +242,10 @@
             </div>
             <div class="d-flex">
               <div class="col-9">
-                <img src="/assets/icooon.b1acba16.png" alt="" class="logophoto sizelogo">
+                <img src="/assets/imgs/icooon.b1acba16.png" alt="" class="logophoto sizelogo">
                 <small class="nameko">Mark Jamisola</small>
               </div>
-              <div class="mt-3 "> 
+              <div class="mt-1"> 
                 <a href="otherprofile.html">
                   <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
                     View
