--- a/my-app/src/home.html
+++ b/my-app/src/home.html
@@ -35,7 +35,6 @@
             <a class="navbar-brand branding" href="home.html"><img src="/assets/imgs/icooon.b1acba16.png" class="logos" alt="">LearnIT</a>
           </div>
           <div class="col-lg-6 col-md-0">
-            <a href="search.html"><button class="btn btn-outline-primary">Search</button></a>
             <button class="btn navbar-toggler d-lg-none" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
             <span class="navbar-toggler-icon"></span>
             </button>
@@ -177,7 +176,7 @@
             <div class="main-content mt-4 pb-2">
               <form id="post_form" class="create-post">
                 <div class="create-post-input">
-                  <img src="/assets/imgs/icooon.b1acba16.png" alt="">
+                  <img src="assets/imgs/icooon.b1acba16.png" alt="" id="myProfilefuck">
                   <textarea id="post" name="post" rows="2" placeholder="Write a post..."></textarea>
                 </div>
                 
