--- a/my-app/src/editprofile.html
+++ b/my-app/src/editprofile.html
@@ -144,35 +144,33 @@
                   </div>
                 </form>
               </div>
+
               <form action="" id="Full_Name">
               <h3 class="pt-sm-5 pt-1">Name</h3>
               <div class="d-flex mb-2">
                 <div class="input-container">
-                  <input type="text" placeholder="First Name" class="form-control small mx-2" id="name_first" name="name_first">
+                  <input type="text" placeholder="First Name" class="w-100 small" id="name_first" name="name_first">
                 </div>
-                  <button type="submit" class="btn btn-primary">Update</button>
+                  <button type="submit" class="btn btn-primary mx-2">Update</button>
               </div>
               <div class="d-flex">
                 <div class="input-container">
-                  <input type="text" placeholder="Last Name" class="form-control small mx-2"  id="last_first" name="name_last">
+                  <input type="text" placeholder="Last Name" class="w-100 small"  id="last_first" name="name_last">
                 </div>
-                  <button type="submit" class="btn btn-primary">Update</button>
+                  <button type="submit" class="btn btn-primary mx-2">Update</button>
               </div>
               </form>
 
 
-
-
-
-
-
               <form action="" id="BioExtract2">
                 <h3>Bio</h3>
-                <div class="d-flex">
+                <div class="d-flex ">
                 <div class="input-container">
-                  <input type="text" class="form-control small" id="bio1" placeholder="Say Something" name="bio1" />
+                  <input type="text" class="w-100 small" id="bio1" placeholder="Say Something" name="bio1" />
                 </div>
-                <button type="submit" class="btn btn-primary mx-2">Update</button>
+                <div>
+                  <button type="submit" class="btn btn-primary mx-2">Update</button>
+                </div>
                 </div>
               </form>
 
@@ -182,15 +180,11 @@
                 <h3>Contact Info</h3>
                 <div class="d-flex">
                   <div class="input-container">
-                    <input type="email" class="form-control small" id="bio2" placeholder="Input contact address" name="bio2" />
+                    <input type="email" class="w-100 small" id="bio2" placeholder="Input contact address" name="bio2" />
                   </div>
                   <button type="submit" class="btn btn-primary mx-2">Update</button>
                 </div>
               </form>
-
-
-
-
 
 
 
@@ -208,6 +202,12 @@
                   <button type="submit" class="btn btn-primary mx-2">Update</button>
                 </div>
                 </form>
+                <a href="profile.html">
+                  <button id="btn_interact" class="btn btn-primary mx-2 my-2" type="button" aria-controls="offcanvasExample">
+                    Back to Profile
+                  </button>
+                </a>
+
               </div>
             </div>
           </div>
