--- a/my-app/src/home.html
+++ b/my-app/src/home.html
@@ -172,11 +172,11 @@
           
 
           <div  class="container col-lg-6 col-sm-12">
-          <div class="container col-10">
+          <div class="container col-12">
             <div class="main-content mt-4 pb-2">
               <form id="post_form" class="create-post">
                 <div class="create-post-input">
-                  <img src="assets/imgs/icooon.b1acba16.png" alt="" id="myProfilefuck">
+                  <img src="assets/imgs/icooon.b1acba16.png" alt="" id="myProfilefucks">
                   <textarea id="post" name="post" rows="2" placeholder="Write a post..."></textarea>
                 </div>
                 
