--- a/my-app/src/siteadmin.html
+++ b/my-app/src/siteadmin.html
@@ -117,17 +117,17 @@
                     <div class="d-flex col-6">
                         <div class="col-lg-6"></div>
                         <h4 class="col-8">Total Posts</h4>
-                        <h5 class="col-2">100</h5>
+                        <h5 class="col-2" id="totalPosts">0</h5>
                     </div>
                     <div class="d-flex col-6">
                         <div class="col-lg-6"></div>
                         <h4 class="col-8">Total Users</h4>
-                        <h5 class="col-2">100</h5>
+                        <h5 class="col-2" id="totalUsers">0</h5>
                     </div>
                     <div class="d-flex col-6">
                         <div class="col-lg-6"></div>
                         <h4 class="col-8">New Users</h4>
-                        <h5 class="col-2">100</h5>
+                        <h5 class="col-2" id="newUsers">0</h5>
                     </div>
                 </div>
             </div>
@@ -155,229 +155,24 @@
                 <div class="container insidecontent">
                     <h3>Posts</h3>
                     <hr>
-                    <div class="mt-2 d-flex">
-                        <div class="d-flex col-3 mt-1">
-                            <p>Post ID : </p><p class="postidnum">103</p>
-                        </div>
-                        <p class="postcharacters mt-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi praesentium eum deleniti velit provident dolores, distinctio atque quos adipisci ex, tenetur asperiores qui inventore blanditiis deserunt animi fugit reiciendis odit.</p>
-                        <div class="col-lg-3"></div>
-                        <div class="d-flex">
-                            <div class="">
-                                <a href="post.html">
-                                    <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
-                                      <small>View</small>
-                                    </button>
-                                  </a>
-                            </div>
-                            <div class="mx-1"></div>
-                            <div class="delbutton">
-                                <a href="">
-                                    <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
-                                      <div class="material-icons-outlined">
-                                        delete
-                                      </div>
-                                    </button>
-                                  </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="mt-2 d-flex">
-                        <div class="d-flex col-3 mt-1">
-                            <p>Post ID : </p><p class="postidnum">103</p>
-                        </div>
-                        <p class="postcharacters mt-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi praesentium eum deleniti velit provident dolores, distinctio atque quos adipisci ex, tenetur asperiores qui inventore blanditiis deserunt animi fugit reiciendis odit.</p>
-                        <div class="col-lg-3"></div>
-                        <div class="d-flex">
-                            <div class="">
-                                <a href="post.html">
-                                    <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
-                                      <small>View</small>
-                                    </button>
-                                  </a>
-                            </div>
-                            <div class="mx-1"></div>
-                            <div class="delbutton">
-                                <a href="">
-                                    <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
-                                      <div class="material-icons-outlined">
-                                        delete
-                                      </div>
-                                    </button>
-                                  </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="mt-2 d-flex">
-                        <div class="d-flex col-3 mt-1">
-                            <p>Post ID : </p><p class="postidnum">103</p>
-                        </div>
-                        <p class="postcharacters mt-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi praesentium eum deleniti velit provident dolores, distinctio atque quos adipisci ex, tenetur asperiores qui inventore blanditiis deserunt animi fugit reiciendis odit.</p>
-                        <div class="col-lg-3"></div>
-                        <div class="d-flex">
-                            <div class="">
-                                <a href="post.html">
-                                    <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
-                                      <small>View</small>
-                                    </button>
-                                  </a>
-                            </div>
-                            <div class="mx-1"></div>
-                            <div class="delbutton">
-                                <a href="">
-                                    <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
-                                      <div class="material-icons-outlined">
-                                        delete
-                                      </div>
-                                    </button>
-                                  </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="mt-2 d-flex">
-                        <div class="d-flex col-3 mt-1">
-                            <p>Post ID : </p><p class="postidnum">103</p>
-                        </div>
-                        <p class="postcharacters mt-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi praesentium eum deleniti velit provident dolores, distinctio atque quos adipisci ex, tenetur asperiores qui inventore blanditiis deserunt animi fugit reiciendis odit.</p>
-                        <div class="col-lg-3"></div>
-                        <div class="d-flex">
-                            <div class="">
-                                <a href="post.html">
-                                    <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
-                                      <small>View</small>
-                                    </button>
-                                  </a>
-                            </div>
-                            <div class="mx-1"></div>
-                            <div class="delbutton">
-                                <a href="">
-                                    <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
-                                      <div class="material-icons-outlined">
-                                        delete
-                                      </div>
-                                    </button>
-                                  </a>
-                            </div>
-                        </div>
+                    <div id="posts-container">
+                        <!-- Posts will be dynamically inserted here -->
                     </div>
                 </div>
             </div>
-            <div class="mt-2"></div>
-            <div class="col-lg-4 mx-lg-2 usersss">
+
+            <div class="col-lg-4 d-flex">
                 <div class="container insidecontent">
                     <h3>Users</h3>
                     <hr>
-                        <div class="mt-2 d-flex">
-                        <div class="d-flex col-6">
-                            <img src="/assets/imgs/icooon.b1acba16.png" alt="">
-                            <p class="mt-1">Glomer Celestino</p>
-                        </div>
-                        <div class="col-2 mt-1">1001</div>
-                        <div class="d-flex mx-3">
-                            <div class="">
-                                <a href="otherprofile.html">
-                                    <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
-                                      <small>View</small>
-                                    </button>
-                                  </a>
-                            </div>
-                            <div class="mx-1"></div>
-                            <div class="delbutton">
-                                <a href="">
-                                    <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
-                                      <div class="material-icons-outlined">
-                                        delete
-                                      </div>
-                                    </button>
-                                  </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="mt-2 d-flex">
-                        <div class="d-flex col-6">
-                            <img src="/assets/imgs/icooon.b1acba16.png" alt="">
-                            <p class="mt-1">Glomer Celestino</p>
-                        </div>
-                        <div class="col-2 mt-1">1001</div>
-                        <div class="d-flex mx-3">
-                            <div class="">
-                                <a href="otherprofile.html">
-                                    <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
-                                      <small>View</small>
-                                    </button>
-                                  </a>
-                            </div>
-                            <div class="mx-1"></div>
-                            <div class="delbutton">
-                                <a href="">
-                                    <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
-                                      <div class="material-icons-outlined">
-                                        delete
-                                      </div>
-                                    </button>
-                                  </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="mt-2 d-flex">
-                        <div class="d-flex col-6">
-                            <img src="/assets/imgs/icooon.b1acba16.png" alt="">
-                            <p class="mt-1">Glomer Celestino</p>
-                        </div>
-                        <div class="col-2 mt-1">1001</div>
-                        <div class="d-flex mx-3">
-                            <div class="">
-                                <a href="otherprofile.html">
-                                    <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
-                                      <small>View</small>
-                                    </button>
-                                  </a>
-                            </div>
-                            <div class="mx-1"></div>
-                            <div class="delbutton">
-                                <a href="">
-                                    <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
-                                      <div class="material-icons-outlined">
-                                        delete
-                                      </div>
-                                    </button>
-                                  </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="mt-2 d-flex">
-                        <div class="d-flex col-6">
-                            <img src="/assets/imgs/icooon.b1acba16.png" alt="">
-                            <p class="mt-1">Glomer Celestino</p>
-                        </div>
-                        <div class="col-2 mt-1">1001</div>
-                        <div class="d-flex mx-3">
-                            <div class="">
-                                <a href="otherprofile.html">
-                                    <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
-                                      <small>View</small>
-                                    </button>
-                                  </a>
-                            </div>
-                            <div class="mx-1"></div>
-                            <div class="delbutton">
-                                <a href="">
-                                    <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
-                                      <div class="material-icons-outlined">
-                                        delete
-                                      </div>
-                                    </button>
-                                  </a>
-                            </div>
-                        </div>
+                    <div id="users-container">
+                        <!-- Users will be dynamically inserted here -->
                     </div>
                 </div>
             </div>
           </div>
     </main>
-    
-    <div class="footerstyle d-none d-lg-block d-xl-block ">
-        <h4 class="branding">LearnIT</h4>
-        <small>© Copyright 2024</small>
-    </div>
+
+    <script type="module" src="./js/siteadmin.js"></script>
   </body>
 </html>
