--- a/my-app/src/home.html
+++ b/my-app/src/home.html
@@ -358,6 +358,29 @@
       </div>
     </main>
     
+
+    <div class="modal" id="modal_comments" tabindex="-1">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Edit Comment</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <form id="form_change_comment">
+              <div class="form-floating">
+                <textarea  id="commentReady" class="form-control" placeholder="Leave a comment here"></textarea>
+                <label for="comment">Comments</label>
+              </div>
+            </form> 
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button id="editing_comment" type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="footerstyle d-none d-lg-block d-xl-block ">
       <h4 class="branding">LearnIT</h4>
       <small>© Copyright 2024</small>
